# gardens

./: README.md  generate-relay-key.js
.github/workflows/: ci.yml
app/: .gitignore  App.tsx  package-lock.json  package.json
app/__tests__/: onionRoute.test.ts
app/android/app/: build.gradle
app/ios/Gardens.xcodeproj/: project.pbxproj
app/src/components/: BlobImage.tsx  BlobVideo.tsx  ChannelMessage.tsx  DebugConnectionPanel.tsx  DebugPanel.tsx  DefaultCoverShader.tsx  DonationPromptModal.tsx  LinkPreview.tsx  LockScreen.tsx  MessageBubble.tsx  MessageComposer.tsx  MessageText.tsx  OrgAdminInboxPanel.tsx  OrgEventsPanel.tsx  OrgSearchPanel.tsx  PublicIdentityCard.tsx
app/src/ffi/: deltaCore.ts  gardensCore.ts
app/src/navigation/: RootNavigator.tsx
app/src/screens/: AddMemberScreen.tsx  AuditLogScreen.tsx  ChannelSettingsScreen.tsx  ConversationScreen.tsx  DMChatScreen.tsx  DiscoverOrgsScreen.tsx  HomeScreen.tsx  InboxScreen.tsx  JoinOrgRequestScreen.tsx  JoinOrgScreen.tsx  MemberListScreen.tsx  NotificationsPermissionScreen.tsx  OrgChatScreen.tsx  OrgInviteScreen.tsx  OrgSettingsScreen.tsx  QrScannerScreen.tsx  RequestsScreen.tsx  RoomChatScreen.tsx  SeedRecoveryScreen.tsx  SignupScreen.tsx  UserSettingsScreen.tsx  VoiceRoomScreen.tsx  WelcomeScreen.tsx
app/src/services/: pushNotifications.ts  webrtc.ts
app/src/sheets/: AttachSheet.tsx  BackupSeedSheet.tsx  ChannelActionsSheet.tsx  ChannelOptionsSheet.tsx  CommunityPreviewSheet.tsx  ConversationActionsSheet.tsx  DeleteAccountSheet.tsx  EditAvailableForSheet.tsx  EditOrgSheet.tsx  EditProfileSheet.tsx  FabSheet.tsx  (+10 more)
core/: Cargo.toml
core/src/: blobs.rs  db.rs  delta_core.udl  encryption.rs  gardens_core.udl  lib.rs  network.rs  onion.rs  ops.rs  pkarr_publish.rs  projector.rs  store.rs  sync_config.rs
docs/: deploy-to-public-key-plan.md
docs/plans/: 2026-03-02-stripe-connect-payments-design.md
relay/: package-lock.json  package.json  wrangler.toml
relay/src/: blob-constants.ts  blob.test.ts  index.ts  mime.test.ts  mime.ts  pkarr.test.ts  pkarr.ts
sync/: wrangler.toml
sync/src/: index.ts  topic-do.ts
web/: package-lock.json  package.json  wrangler.toml
web/src/: index.ts  pkarr.ts  template.ts  types.d.ts
(+27 files in other folders)
