[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "delta_core"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
# P2Panda stack
p2panda-core = "0.5"
p2panda-store = { version = "0.5", features = ["sqlite"] }
p2panda-auth = "0.5"
p2panda-encryption = { version = "0.5", features = ["data_scheme", "message_scheme"] }
p2panda-blobs = "0.5"

# UniFFI
uniffi = { version = "0.31", features = ["tokio", "cli"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite (read model) — use sqlx to share the same sqlite3 link unit as p2panda-store
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# BIP-39 mnemonic
bip39 = { version = "2", features = ["rand"] }

# pkarr — publish / resolve signed DNS packets over the mainline BitTorrent DHT
pkarr = { version = "5" }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek      = { version = "2", features = ["static_secrets"] }
curve25519-dalek  = "4"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Hex encoding / decoding
hex = "0.4"

# Base64 encoding / decoding
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex for validation
regex = "1"

# HTTP client for P2P blob transfer
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Iroh P2P networking stack
# iroh-blobs 0.96.0 depends on iroh 0.94.0, so pin the direct dep to 0.94
# to avoid two incompatible iroh versions in the same binary.
iroh = "0.94"
iroh-gossip = "0.94"
iroh-blobs = "0.96"

# Async helpers
futures-util = "0.3"

# z32 encoding for pkarr keys
z32 = "1"

# Logging (used on all platforms, but android_logger bridges to Android logcat)
log = "0.4"
once_cell = "1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

# For generating bindings
[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
